<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="delegate"
            type="com.nft.quizgame.function.user.LoginFragment.ActionDelegate" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/bg_login_guide"
        >


        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sw_84dp"
            style="@style/AppTextRegular"
            android:textSize="@dimen/sw_42sp"
            android:textColor="#c9c9c9"
            android:onClick="@{()->delegate.skip()}"
            android:padding="@dimen/sw_15dp"

            android:text="@string/skip"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="@dimen/sw_240dp"
            android:layout_height="@dimen/sw_240dp"
            android:src="@mipmap/app_icon_roundrect"
            android:contentDescription="@null"

            android:layout_marginTop="@dimen/sw_246dp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_skip"
            />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_red_envelope"
            android:textSize="@dimen/sw_60sp"
            android:textColor="#304c79"
            style="@style/AppText"

            android:layout_marginStart="@dimen/sw_72dp"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="@id/iv_icon"
            app:layout_constraintBottom_toTopOf="@+id/tv_title_des"
            app:layout_constraintLeft_toRightOf="@id/iv_icon"
            app:layout_constraintRight_toRightOf="parent"
            />


        <TextView
            android:id="@+id/tv_title_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/funny_quiz_game"
            android:textSize="@dimen/sw_36sp"
            android:textColor="#304c79"
            style="@style/AppTextRegular"

            android:layout_marginTop="@dimen/sw_30dp"
            android:layout_marginStart="@dimen/sw_72dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintBottom_toBottomOf="@id/iv_icon"
            app:layout_constraintRight_toRightOf="@id/tv_title"
            />



        <TextView
            android:id="@+id/tv_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sw_33sp"
            style="@style/AppTextRegular"
            android:textColor="#B0C8FF"
            android:text="@string/protocol_statement"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/sw_45dp"
            />


        <ImageView
            android:id="@+id/iv_login_alipay"
            android:layout_width="@dimen/sw_144dp"
            android:layout_height="@dimen/sw_144dp"
            android:src="@mipmap/icon_alipay_white"

            android:layout_marginBottom="@dimen/sw_24dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_login_alipay"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/iv_login_phone"/>

        <TextView
            android:id="@+id/tv_login_alipay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_alipay"
            style="@style/AppTextMedium"
            android:textColor="@color/white"
            android:textSize="@dimen/sw_36sp"
            android:layout_marginBottom="@dimen/sw_93dp"
            app:layout_constraintBottom_toTopOf="@id/tv_protocol"
            app:layout_constraintLeft_toLeftOf="@id/iv_login_alipay"
            app:layout_constraintRight_toRightOf="@id/iv_login_alipay"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="@id/tv_login_alipay"
            app:layout_constraintRight_toRightOf="@id/tv_login_alipay"
            app:layout_constraintTop_toTopOf="@id/iv_login_alipay"
            app:layout_constraintBottom_toBottomOf="@id/iv_login_alipay"
            android:onClick="@{()->delegate.alipayLogin()}"
            />

        <ImageView
            android:id="@+id/iv_login_phone"
            android:layout_width="@dimen/sw_144dp"
            android:layout_height="@dimen/sw_144dp"
            android:src="@mipmap/icon_tel_white"

            app:layout_constraintBottom_toBottomOf="@id/iv_login_alipay"
            app:layout_constraintLeft_toRightOf="@id/iv_login_alipay"
            app:layout_constraintRight_toLeftOf="@+id/iv_login_tourists"
            />

        <TextView
            android:id="@+id/tv_login_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_phone"
            style="@style/AppTextMedium"
            android:textColor="@color/white"
            android:textSize="@dimen/sw_36sp"

            app:layout_constraintBottom_toBottomOf="@id/tv_login_alipay"
            app:layout_constraintLeft_toLeftOf="@id/iv_login_phone"
            app:layout_constraintRight_toRightOf="@id/iv_login_phone"/>

        <View
            android:layout_width="@dimen/sw_0dp"
            android:layout_height="@dimen/sw_0dp"
            app:layout_constraintLeft_toLeftOf="@id/tv_login_phone"
            app:layout_constraintRight_toRightOf="@id/tv_login_phone"
            app:layout_constraintTop_toTopOf="@id/iv_login_phone"
            app:layout_constraintBottom_toBottomOf="@id/iv_login_phone"
            android:onClick="@{()->delegate.phoneLogin()}"
            />

        <ImageView
            android:id="@+id/iv_login_tourists"
            android:layout_width="@dimen/sw_144dp"
            android:layout_height="@dimen/sw_144dp"
            android:src="@mipmap/icon_tel_white"
            app:layout_constraintBottom_toBottomOf="@id/iv_login_alipay"
            app:layout_constraintLeft_toRightOf="@id/iv_login_phone"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_login_tourists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTextMedium"
            android:textColor="@color/white"
            android:textSize="@dimen/sw_36sp"
            android:text="@string/login_tourists"

            app:layout_constraintBottom_toBottomOf="@id/tv_login_alipay"
            app:layout_constraintLeft_toLeftOf="@id/iv_login_tourists"
            app:layout_constraintRight_toRightOf="@id/iv_login_tourists" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="@id/tv_login_tourists"
            app:layout_constraintRight_toRightOf="@id/tv_login_tourists"
            app:layout_constraintTop_toTopOf="@id/iv_login_tourists"
            app:layout_constraintBottom_toBottomOf="@id/iv_login_tourists"
            android:onClick="@{()->delegate.touristsLogin()}"
            />

        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppText"
            android:textColor="@color/white"
            android:textSize="@dimen/sw_48sp"
            android:text="@string/please_login"

            android:layout_marginBottom="@dimen/sw_60dp"
            app:layout_constraintBottom_toTopOf="@id/iv_login_alipay"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


        <View
            android:layout_width="0dp"
            android:layout_height="2px"
            android:background="@color/white"

            android:layout_marginEnd="@dimen/sw_33dp"
            app:layout_constraintLeft_toLeftOf="@id/tv_login_alipay"
            app:layout_constraintRight_toLeftOf="@id/tv_login_title"
            app:layout_constraintTop_toTopOf="@id/tv_login_title"
            app:layout_constraintBottom_toBottomOf="@id/tv_login_title"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="2px"
            android:background="@color/white"

            android:layout_marginStart="@dimen/sw_33dp"
            app:layout_constraintLeft_toRightOf="@id/tv_login_title"
            app:layout_constraintRight_toRightOf="@id/tv_login_tourists"
            app:layout_constraintTop_toTopOf="@id/tv_login_title"
            app:layout_constraintBottom_toBottomOf="@id/tv_login_title"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTextRegular"
            android:textColor="#D8F5FF"
            android:textSize="@dimen/sw_42sp"
            android:text="@string/login_des"

            android:layout_marginBottom="@dimen/sw_78dp"
            app:layout_constraintBottom_toTopOf="@id/tv_login_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_test"
            style="@style/AppText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sw_30dp"
            android:onClick="@{()->delegate.test()}"
            android:text="@string/test"
            android:textColor="#35A2FF"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <include layout="@layout/loading_view_without_bg"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
